--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="HTML,Yaju,Time">
         <title>Yaju Time</title>
         <link rel="shortcut icon" href="/icon32x32.ico">
   </head>
@@ -14,12 +15,12 @@
       text-align: center;
     }
       body {
-        width: 100%;
+        width: 99%;
         height: 100%;
         background-color: #6495ED;
         background-image: url(images/background.webp);
     }
-    @keyframes rotate{
+    @keyframes rotate {
           	0%{
                 		transform: rotateZ(0deg);/*从0度开始*/
             	}
@@ -27,7 +28,7 @@
                 		transform: rotateZ(360deg);/*360度结束*/
             	}
     }
-    .c1{
+    .c1 {
         width: 220px;
         height: 220px;
         border: 4px solid #6495ED;
@@ -39,10 +40,10 @@
     }
     </style>
     <div class="c1">
-      <center><img src="/images/gamar.png" alt="avatar"></center>
+      <center><img src="/images/gamar.png" alt="gamar" width="220" height="220"></center>
     </div>
   <br>
-    <center><b><font size="25" style="font-family: Arial;" class="box"></font></b></center>
+    <center><b><font size="27" style="font-family: Arial;" class="box"></font></b></center>
     <script type="module" src="/js/app.js"></script>
 
 <!-- https://cdn.jsdelivr.net/npm/sakana-widget@2.5.0/lib/sakana.min.css -->
@@ -84,9 +85,10 @@
 
   <footer>
     <section>
-      <div class="copyright"><center>
+      <div class="h1"><center>
         © 2022~2023 by <a href="https://mjt.asia/" target="_blank"><font color="#6495ED"><b>Muji Togawa</b></font></a>
         <p><font size="3"><b>Made With Love</b></font> <font color="# FF0000" size="5">❤</font></p>
+        <p>View it on <a href="https://github.com/MujiTogawa/Yaju-Time" target="_blank"><font color="#6495ED"><b>Github</b></font></a></p>
       </center></div>
     </section>
   </footer>
