--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="keywords" content="HTML,Yaju,Time">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" type="text/css" href="/css/header.css" />
         <title>Yaju Time</title>
         <link rel="shortcut icon" href="/icon32x32.ico">
   </head>
   <body>  
-
+    <header>
+      <section class="u-backlink u-white-ff">
+      <div class="nav">
+        <ul>
+          <li class="logo"><img src="./images/logo.png"></li>
+          <li class="selected"><a href="https://mjt.asia" target="_blank"><b>首页</b></a></li>
+          <li><a href="https://mjt.asia/about/" target="_blank"><b>About</b></a></li>
+          <li><a href="#"><b>Language</b></a></li>
+          <li><a href="#"><b>Light/Dark</b></a></li>
+          <li><a href="#"><b>Contact</b></a></li>
+          <div class="slider"></div>
+        </ul>
+      </div>
+    </section>
+    </header>
     <h1><center>逸一时，误一世！</center></h1>
 
     <style>
@@ -15,7 +32,7 @@
       text-align: center;
     }
       body {
-        width: 99%;
+        width: 100%;
         height: 100%;
         background-color: #6495ED;
         background-image: url(images/background.webp);
@@ -38,10 +55,48 @@
         display: block;
         animation: rotate 4s linear infinite;
     }
+    .u-backlink {
+      position: relative;
+      text-align: center;
+      padding: 1em;
+    }
+    .u-white-ff {
+      color: #ffffff;
+      background-color: #ffffff;
+    }
+    
     </style>
     <div class="c1">
-      <center><img src="/images/gamar.png" alt="gamar" width="220" height="220"></center>
+      <center><img id="light" src="/images/gamar.png" alt="gamar" width="220" height="220"></center>
     </div>
+    <script>
+      /**
+          1.获取图片对象
+          2.绑定单击事件
+          3.每次单击切换图片
+              规则：如果是1 切换图片为2
+              如果是2，切换图片为1
+          使用标记flag完成
+  
+      */
+      // 1.获取图片对象
+      var light=document.getElementById("light");
+  
+      var flag=false;//代表为图1状态
+      //2.绑定单击事件
+      light.onclick=function(){//定义匿名方法
+          if(flag){
+              //判断如果是图2，则换图1;
+              light.src="images/gamar.png";
+              flag=false;
+          }else{
+              //反之
+              light.src="images/SENPAI.png";
+              flag=true;
+          }
+          
+      }
+    </script>
   <br>
     <center><b><font size="27" style="font-family: Arial;" class="box"></font></b></center>
     <script type="module" src="/js/app.js"></script>
@@ -92,4 +147,5 @@
       </center></div>
     </section>
   </footer>
+  <br>
 </html>
