nprettier avaiation bar and new themes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
   <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="HTML,Yaju,Time">
+    <meta charset="utf-8"/>
+    <meta name="keywords" content="HTML,Yaju,Time,木屐落在水洼了,MujiTogawa"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/css/header.css" />
         <title>Yaju Time</title>
-        <link rel="shortcut icon" href="/icon32x32.ico">
+        <link rel="shortcut icon" href="/icon32x32.ico"/>
   </head>
   <body>  
     <header>
@@ -15,12 +15,24 @@
       <div class="nav">
         <ul>
           <li class="logo"><img src="./images/logo.png"></li>
-          <li class="selected"><a href="https://mjt.asia" target="_blank"><b>首页</b></a></li>
+          <li class="selected"><a href="https://mjt.asia" target="_blank"><b>HomePage</b></a></li>
           <li><a href="https://mjt.asia/about/" target="_blank"><b>About</b></a></li>
-          <li><a href="#"><b>Language</b></a></li>
-          <li><a href="#"><b>Light/Dark</b></a></li>
-          <li><a href="#"><b>Contact</b></a></li>
-          <div class="slider"></div>
+          <div class="nav1">
+            <a href="#" class="cont"><b>Language</b></a>
+              <div class="nav2">
+                  <a href="#">简体中文</a>
+                  <a href="#">繁體中文</a>
+                  <a href="#">English</a>
+              </div>
+          </div> 
+          <div class="nav1">
+              <a href="#" class="cont"><b>Themes</b></a>
+                <div class="nav2">
+                    <a href="#">GAMAR</a>
+                    <a href="Themes/exam/index.html">EXAM</a>
+                </div>
+          </div> 
+          <li><a href="mailto:mujitogawa@163.com" title="E-Mail → mailto:MujiTogawa@163.com" rel="noopener" target="_blank"><b>Contact</b></a></li>
         </ul>
       </div>
     </section>
@@ -58,7 +70,7 @@
     .u-backlink {
       position: relative;
       text-align: center;
-      padding: 1em;
+      padding: 0.5em;
     }
     .u-white-ff {
       color: #ffffff;
