--- a/Themes/exam/index.html
+++ b/Themes/exam/index.html
@@ -2,35 +2,24 @@
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8"/>
-    <meta name="keywords" content="HTML,Yaju,Time,木屐落在水洼了,MujiTogawa"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="/css/header.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/switch.css" />
         <title>Yaju Time-EXAM</title>
         <link rel="shortcut icon" href="/icon32x32.ico"/>
   </head>
-  <body>
-  <br>
-  <br>
-  <br>  
-  <br>
-  <br>
-    <style type="text/css">
-        h2 {
-          text-align: middle;
-          position: absolute; 
-          left:0;    
-          top:0;   
-          right:0;   
-          bottom:0;   
-          margin: auto;
-        }
-    </style>  
-  <br>
-    <a href="/index.html">
-        <center><b><font size="30" color="black" style="font-family: Arial;" class="box"></font></b></center>
+  <body id="body">
+    <div class="switcher" >
+      <div class="bai" id="anniu"></div>
+    </div>
+    <script src="/js/switch.js"></script>
+    <a href="/index.html" class="back">返回</a>
+    <p>
+      <div class="box center time-L centerfocus">
         <script type="module" src="/js/app.js"></script>
-    </a>
+      </div>
+    </p>
   </body>
 
 </html>
