--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/nav.css" />
     <!-- 注意行距 -->
     <title>Yaju Time</title>
     <link rel="shortcut icon" href="/icon32x32.ico"/>
@@ -16,37 +17,46 @@
     </style>
   </head>
   <body>
-    <header>
-      <section class="u-backlink u-white-ff">
-        <div class="nav">
-          <ul>
-            <li class="logo"><img src="./images/logo.png"></li>
-            <li class="selected"><a href="https://mjt.asia" target="_blank" class="bold">HomePage</a></li>
-            <li><a href="https://mjt.asia/about/" target="_blank" class="bold">About</a></li>
-            <div class="nav1">
-              <a href="#" class="cont bold">Language</a>
-                <div class="nav2">
-                    <a href="#">简体中文</a>
-                    <a href="#">繁體中文</a>
-                    <a href="#">English</a>
-                </div>
-            </div> 
-            <div class="nav1">
-                <a href="#" class="cont bold">Themes</a>
-                  <div class="nav2">
-                      <a href="#">GAMAR</a>
-                      <a href="Themes/exam/index.html">EXAM</a>
-                  </div>
-            </div> 
-            <li><a href="mailto:mujitogawa@163.com" title="E-Mail → mailto:MujiTogawa@163.com" rel="noopener" target="_blank" class="bold">Contact</a></li>
+    <header class="header">
+      <nav class="navbar">
+          <a href="https://time.mjt.asia/" class="nav-logo">YajuTime</a>
+          <ul class="nav-menu">
+              <li class="nav-item">
+                  <a href="https://github.com/MujiTogawa/Yaju-Time#readme" class="nav-link" target="_blank">About</a>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Themes</a>
+                  <ul class="nav2">
+                    <a href="#" target="_self" rel="noreferrer">GAMAR</a>
+                    <a href="/Themes/exam/index.html" target="_self" rel="noreferrer">EXAM</a>
+                  </ul>
+              </li>
+              <li class="nav-item">
+                  <a href="#" class="nav-link">Language</a>
+                  <ul class="nav2">
+                    <a href="#" target="_self" rel="noreferrer">简体中文</a>
+                    <a href="#" target="_self" rel="noreferrer">English</a>
+                    <a href="#" target="_self" rel="noreferrer">繁體中文</a>
+                  </ul>
+              </li>
+              <li class="nav-item">
+                <a href="mailto:mujitogawa@163.com" title="E-Mail → mailto:MujiTogawa@163.com" rel="noopener" target="_blank" class="nav-link">Contact</a>
+              </li>
           </ul>
-        </div>
-      </section>
+          <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+          </div>
+      </nav>
     </header>
-    
+    <script src="/js/hamburger.js"></script>
+<br/>
+
     <h1>逸一时，误一世！</h1>
+<br/>
     <div class="c1 center">
-      <img id="light" src="/images/gamar.png" alt="gamar" width="220" height="220">
+      <img id="light" src="/images/SENPAI.png" alt="gamar" width="220" height="220">
     </div>
     <script>
       /**
@@ -66,11 +76,11 @@
       light.onclick = function () {//定义匿名方法
           if (flag) {
               //判断如果是图2，则换图1;
-              light.src = "images/gamar.png";
+              light.src = "images/SENPAI.png";
               flag = false;
           } else {
               //反之
-              light.src = "images/SENPAI.png";
+              light.src = "images/gamar.png";
               flag = true;
           }
           
@@ -90,7 +100,7 @@
     href="https://cdn.jsdelivr.net/npm/sakana-widget@2.5.0/lib/sakana.min.css"
   />
   <div id="sakana-widget" style="position:fixed;right:0px;bottom:0px;"></div>
-  <script>
+  <script async>
     function initSakanaWidget() {
       const takina = SakanaWidget.getCharacter('takina');
       takina.initialState = {
