--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/css/nav.css" />
     <!-- 注意行距 -->
-    <title>Yaju Time</title>
+    <title>Yajuu Time</title>
     <link rel="shortcut icon" href="/icon32x32.ico"/>
     <style> 
       body {
