--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <nav class="navbar">
-          <a href="https://time.mjt.asia/" class="nav-logo">YajuTime</a>
+          <a href="https://time.mjt.asia/" class="nav-logo">YajuuTime</a>
           <ul class="nav-menu">
               <li class="nav-item">
                   <a href="https://github.com/MujiTogawa/Yaju-Time#readme" class="nav-link" target="_blank">About</a>
